# openrepo-sync

./: .gitignore  Cargo.toml  Dockerfile  README.md  USAGE.txt  config.yaml.example  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docker.yml  pages.yml  release.yml
docs/: _config.yml  api.md  configuration.md  coverage.md  docker.md  index.md  install.md  sources.md  usage.md
man/man1/: openrepo-sync.1
projects/: direct-url-example.yaml.example  direct-url-latest-example.yaml.example  github-example.yaml.example  sourceforge-example.yaml.example
src/: config.rs  main.rs  models.rs  repo_client.rs  sync.rs  test_util.rs  version.rs
src/sources/: direct_url.rs  github.rs  mod.rs  sourceforge.rs
