[package]
name = "openrepo"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "openrepo-sync"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "charset", "http2", "rustls-tls"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive"] }
clap_mangen  = "0.2"
anyhow       = "1"
thiserror    = "2"
semver       = { version = "1", features = ["serde"] }
regex        = "1"
glob         = "0.3"
scraper      = "0.19"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile     = "3"
futures      = "0.3"
